fixed spacing of group info

--- a/app/assets/stylesheets/pages/_groups-show.scss
+++ b/app/assets/stylesheets/pages/_groups-show.scss
@@ -1,5 +1,5 @@
 .group-show-container {
-  margin: 0 16px;
+  // margin: 0 16px;
 }
 
 .group-show-container .card-product {
@@ -18,4 +18,9 @@
 
 .group-info p {
   margin: 0 8px 4px;
+  td {
+    text-align: left;
+  }
 }
+
+
